--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Farm Labour Attendance Tracker</title>
     </head>
     <body>
-        <div id='root'></div>
+
+  <h1>Farm Labour Attendance Tracker</h1>
+  <p>Website is live successfully 🎉</p>
+
+
     </body>
 </html>
